_Source/syntactic.output
Terminais sem uso na gramática

   AND
   OR
   NEGACAO
   IDF
   ASPAS
   ABRE_COLCHETE
   FECHA_COLCHETE
   DOIS_PONTOS
   HASHMARK
   PONTO
   PIPE
   BARRA
   DIFERENTE
   ESPACO
   BARRAN
   BARRAT
   DIGITO
   NUMERAL
   LETRA
   FRAC_OPT
   RES_BREAK
   RES_CASE
   RES_CHAR
   RES_DEFAULT
   RES_DO
   RES_GOTO
   RES_LONG
   RES_RETURN
   RES_SIZEOF
   RES_STATIC
   RES_STRUCT
   RES_TYPEDEF
   RES_VOID
   RES_WHILE
   ALGUMA_COISA


Gramática

    0 $accept: root $end

    1 root: code

    2 code: declaration recursionDec
    3     | declaration recursionDec code
    4     | declaration assignment value recursionOP
    5     | declaration assignment value recursionOP code
    6     | if openParent value boolean_exp value closeParent openKey code closeKey
    7     | if openParent value boolean_exp value closeParent openKey code closeKey code
    8     | if openParent value boolean_exp value closeParent openKey code closeKey else openKey code closeKey
    9     | if value boolean_exp value openKey code closeKey else openKey code closeKey code
   10     | var assignment value recursionOP
   11     | var assignment value recursionOP code
   12     | var openParent closeParent
   13     | var openParent closeParent semi
   14     | var openParent closeParent semi code
   15     | var openParent closeParent openKey code closeKey code
   16     | var openParent parameters closeParent
   17     | var openParent parameters closeParent semi
   18     | var openParent parameters closeParent semi code
   19     | var openParent parameters closeParent openKey code closeKey code
   20     | for openParent var assignment value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey
   21     | for openParent var assignment value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey code

   22 for: RES_FOR

   23 parameters: value
   24           | value comma parameters

   25 recursionOP: semi
   26            | op value recursionOP

   27 recursionDec: semi
   28             | comma declaration recursionDec

   29 assignment: ATRIBUICAO

   30 var: NOME

   31 semi: PONTO_E_VIRGULA

   32 comma: VIRGULA

   33 if: RES_IF

   34 else: RES_ELSE

   35 openKey: ABRE_CHAVE

   36 closeKey: FECHA_CHAVE

   37 openParent: ABRE_PARENTESES

   38 closeParent: FECHA_PARENTESES

   39 declaration: type var

   40 boolean_exp: IGUAL
   41            | MAIOR
   42            | MENOR
   43            | MAIOR_IGUAL
   44            | MENOR_IGUAL

   45 op: SOMA
   46   | SUBTRACAO
   47   | MULTIPLICACAO
   48   | DIVISAO
   49   | RESTO

   50 value: var
   51      | NUM

   52 type: RES_FLOAT
   53     | RES_INT
   54     | STRING
   55     | RES_DOUBLE
   56     | RES_BOOL


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
SUBTRACAO (258) 46
SOMA (259) 45
MULTIPLICACAO (260) 47
DIVISAO (261) 48
RESTO (262) 49
AND (263)
OR (264)
NEGACAO (265)
IDF (266)
ASPAS (267)
ATRIBUICAO (268) 29
ABRE_PARENTESES (269) 37
FECHA_PARENTESES (270) 38
ABRE_CHAVE (271) 35
FECHA_CHAVE (272) 36
ABRE_COLCHETE (273)
FECHA_COLCHETE (274)
PONTO_E_VIRGULA (275) 31
DOIS_PONTOS (276)
VIRGULA (277) 32
HASHMARK (278)
PONTO (279)
PIPE (280)
BARRA (281)
MAIOR (282) 41
MENOR (283) 42
MAIOR_IGUAL (284) 43
MENOR_IGUAL (285) 44
IGUAL (286) 40
DIFERENTE (287)
ESPACO (288)
BARRAN (289)
BARRAT (290)
DIGITO (291)
NUMERAL (292)
LETRA (293)
FRAC_OPT (294)
NUM (295) 51
RES_BREAK (296)
RES_CASE (297)
RES_CHAR (298)
RES_DEFAULT (299)
RES_DO (300)
RES_DOUBLE (301) 55
RES_ELSE (302) 34
RES_FLOAT (303) 52
RES_FOR (304) 22
RES_GOTO (305)
RES_IF (306) 33
RES_INT (307) 53
RES_LONG (308)
RES_RETURN (309)
RES_SIZEOF (310)
RES_STATIC (311)
RES_STRUCT (312)
RES_TYPEDEF (313)
RES_VOID (314)
RES_WHILE (315)
NOME (316) 30
STRING (317) 54
ALGUMA_COISA (318)
RES_BOOL (319) 56


Não terminais com as regras onde eles aparecem

$accept (65)
    à esquerda: 0
root (66)
    à esquerda: 1, à direita: 0
code (67)
    à esquerda: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21,
    à direita: 1 3 5 6 7 8 9 11 14 15 18 19 20 21
for (68)
    à esquerda: 22, à direita: 20 21
parameters (69)
    à esquerda: 23 24, à direita: 16 17 18 19 24
recursionOP (70)
    à esquerda: 25 26, à direita: 4 5 10 11 26
recursionDec (71)
    à esquerda: 27 28, à direita: 2 3 28
assignment (72)
    à esquerda: 29, à direita: 4 5 10 11 20 21
var (73)
    à esquerda: 30, à direita: 10 11 12 13 14 15 16 17 18 19 20 21
    39 50
semi (74)
    à esquerda: 31, à direita: 13 14 17 18 20 21 25 27
comma (75)
    à esquerda: 32, à direita: 24 28
if (76)
    à esquerda: 33, à direita: 6 7 8 9
else (77)
    à esquerda: 34, à direita: 8 9
openKey (78)
    à esquerda: 35, à direita: 6 7 8 9 15 19 20 21
closeKey (79)
    à esquerda: 36, à direita: 6 7 8 9 15 19 20 21
openParent (80)
    à esquerda: 37, à direita: 6 7 8 12 13 14 15 16 17 18 19 20 21
closeParent (81)
    à esquerda: 38, à direita: 6 7 8 12 13 14 15 16 17 18 19 20 21
declaration (82)
    à esquerda: 39, à direita: 2 3 4 5 28
boolean_exp (83)
    à esquerda: 40 41 42 43 44, à direita: 6 7 8 9 20 21
op (84)
    à esquerda: 45 46 47 48 49, à direita: 20 21 26
value (85)
    à esquerda: 50 51, à direita: 4 5 6 7 8 9 10 11 20 21 23 24 26
type (86)
    à esquerda: 52 53 54 55 56, à direita: 39


Estado 0

    0 $accept: . root $end

    RES_DOUBLE  deslocar, e ir ao estado 1
    RES_FLOAT   deslocar, e ir ao estado 2
    RES_FOR     deslocar, e ir ao estado 3
    RES_IF      deslocar, e ir ao estado 4
    RES_INT     deslocar, e ir ao estado 5
    NOME        deslocar, e ir ao estado 6
    STRING      deslocar, e ir ao estado 7
    RES_BOOL    deslocar, e ir ao estado 8

    root         ir ao estado 9
    code         ir ao estado 10
    for          ir ao estado 11
    var          ir ao estado 12
    if           ir ao estado 13
    declaration  ir ao estado 14
    type         ir ao estado 15


Estado 1

   55 type: RES_DOUBLE .

    $padrão  reduzir usando a regra 55 (type)


Estado 2

   52 type: RES_FLOAT .

    $padrão  reduzir usando a regra 52 (type)


Estado 3

   22 for: RES_FOR .

    $padrão  reduzir usando a regra 22 (for)


Estado 4

   33 if: RES_IF .

    $padrão  reduzir usando a regra 33 (if)


Estado 5

   53 type: RES_INT .

    $padrão  reduzir usando a regra 53 (type)


Estado 6

   30 var: NOME .

    $padrão  reduzir usando a regra 30 (var)


Estado 7

   54 type: STRING .

    $padrão  reduzir usando a regra 54 (type)


Estado 8

   56 type: RES_BOOL .

    $padrão  reduzir usando a regra 56 (type)


Estado 9

    0 $accept: root . $end

    $end  deslocar, e ir ao estado 16


Estado 10

    1 root: code .

    $padrão  reduzir usando a regra 1 (root)


Estado 11

   20 code: for . openParent var assignment value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey
   21     | for . openParent var assignment value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey code

    ABRE_PARENTESES  deslocar, e ir ao estado 17

    openParent  ir ao estado 18


Estado 12

   10 code: var . assignment value recursionOP
   11     | var . assignment value recursionOP code
   12     | var . openParent closeParent
   13     | var . openParent closeParent semi
   14     | var . openParent closeParent semi code
   15     | var . openParent closeParent openKey code closeKey code
   16     | var . openParent parameters closeParent
   17     | var . openParent parameters closeParent semi
   18     | var . openParent parameters closeParent semi code
   19     | var . openParent parameters closeParent openKey code closeKey code

    ATRIBUICAO       deslocar, e ir ao estado 19
    ABRE_PARENTESES  deslocar, e ir ao estado 17

    assignment  ir ao estado 20
    openParent  ir ao estado 21


Estado 13

    6 code: if . openParent value boolean_exp value closeParent openKey code closeKey
    7     | if . openParent value boolean_exp value closeParent openKey code closeKey code
    8     | if . openParent value boolean_exp value closeParent openKey code closeKey else openKey code closeKey
    9     | if . value boolean_exp value openKey code closeKey else openKey code closeKey code

    ABRE_PARENTESES  deslocar, e ir ao estado 17
    NUM              deslocar, e ir ao estado 22
    NOME             deslocar, e ir ao estado 6

    var         ir ao estado 23
    openParent  ir ao estado 24
    value       ir ao estado 25


Estado 14

    2 code: declaration . recursionDec
    3     | declaration . recursionDec code
    4     | declaration . assignment value recursionOP
    5     | declaration . assignment value recursionOP code

    ATRIBUICAO       deslocar, e ir ao estado 19
    PONTO_E_VIRGULA  deslocar, e ir ao estado 26
    VIRGULA          deslocar, e ir ao estado 27

    recursionDec  ir ao estado 28
    assignment    ir ao estado 29
    semi          ir ao estado 30
    comma         ir ao estado 31


Estado 15

   39 declaration: type . var

    NOME  deslocar, e ir ao estado 6

    var  ir ao estado 32


Estado 16

    0 $accept: root $end .

    $padrão  aceitar


Estado 17

   37 openParent: ABRE_PARENTESES .

    $padrão  reduzir usando a regra 37 (openParent)


Estado 18

   20 code: for openParent . var assignment value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey
   21     | for openParent . var assignment value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey code

    NOME  deslocar, e ir ao estado 6

    var  ir ao estado 33


Estado 19

   29 assignment: ATRIBUICAO .

    $padrão  reduzir usando a regra 29 (assignment)


Estado 20

   10 code: var assignment . value recursionOP
   11     | var assignment . value recursionOP code

    NUM   deslocar, e ir ao estado 22
    NOME  deslocar, e ir ao estado 6

    var    ir ao estado 23
    value  ir ao estado 34


Estado 21

   12 code: var openParent . closeParent
   13     | var openParent . closeParent semi
   14     | var openParent . closeParent semi code
   15     | var openParent . closeParent openKey code closeKey code
   16     | var openParent . parameters closeParent
   17     | var openParent . parameters closeParent semi
   18     | var openParent . parameters closeParent semi code
   19     | var openParent . parameters closeParent openKey code closeKey code

    FECHA_PARENTESES  deslocar, e ir ao estado 35
    NUM               deslocar, e ir ao estado 22
    NOME              deslocar, e ir ao estado 6

    parameters   ir ao estado 36
    var          ir ao estado 23
    closeParent  ir ao estado 37
    value        ir ao estado 38


Estado 22

   51 value: NUM .

    $padrão  reduzir usando a regra 51 (value)


Estado 23

   50 value: var .

    $padrão  reduzir usando a regra 50 (value)


Estado 24

    6 code: if openParent . value boolean_exp value closeParent openKey code closeKey
    7     | if openParent . value boolean_exp value closeParent openKey code closeKey code
    8     | if openParent . value boolean_exp value closeParent openKey code closeKey else openKey code closeKey

    NUM   deslocar, e ir ao estado 22
    NOME  deslocar, e ir ao estado 6

    var    ir ao estado 23
    value  ir ao estado 39


Estado 25

    9 code: if value . boolean_exp value openKey code closeKey else openKey code closeKey code

    MAIOR        deslocar, e ir ao estado 40
    MENOR        deslocar, e ir ao estado 41
    MAIOR_IGUAL  deslocar, e ir ao estado 42
    MENOR_IGUAL  deslocar, e ir ao estado 43
    IGUAL        deslocar, e ir ao estado 44

    boolean_exp  ir ao estado 45


Estado 26

   31 semi: PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 31 (semi)


Estado 27

   32 comma: VIRGULA .

    $padrão  reduzir usando a regra 32 (comma)


Estado 28

    2 code: declaration recursionDec .
    3     | declaration recursionDec . code

    RES_DOUBLE  deslocar, e ir ao estado 1
    RES_FLOAT   deslocar, e ir ao estado 2
    RES_FOR     deslocar, e ir ao estado 3
    RES_IF      deslocar, e ir ao estado 4
    RES_INT     deslocar, e ir ao estado 5
    NOME        deslocar, e ir ao estado 6
    STRING      deslocar, e ir ao estado 7
    RES_BOOL    deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 2 (code)

    code         ir ao estado 46
    for          ir ao estado 11
    var          ir ao estado 12
    if           ir ao estado 13
    declaration  ir ao estado 14
    type         ir ao estado 15


Estado 29

    4 code: declaration assignment . value recursionOP
    5     | declaration assignment . value recursionOP code

    NUM   deslocar, e ir ao estado 22
    NOME  deslocar, e ir ao estado 6

    var    ir ao estado 23
    value  ir ao estado 47


Estado 30

   27 recursionDec: semi .

    $padrão  reduzir usando a regra 27 (recursionDec)


Estado 31

   28 recursionDec: comma . declaration recursionDec

    RES_DOUBLE  deslocar, e ir ao estado 1
    RES_FLOAT   deslocar, e ir ao estado 2
    RES_INT     deslocar, e ir ao estado 5
    STRING      deslocar, e ir ao estado 7
    RES_BOOL    deslocar, e ir ao estado 8

    declaration  ir ao estado 48
    type         ir ao estado 15


Estado 32

   39 declaration: type var .

    $padrão  reduzir usando a regra 39 (declaration)


Estado 33

   20 code: for openParent var . assignment value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey
   21     | for openParent var . assignment value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey code

    ATRIBUICAO  deslocar, e ir ao estado 19

    assignment  ir ao estado 49


Estado 34

   10 code: var assignment value . recursionOP
   11     | var assignment value . recursionOP code

    SUBTRACAO        deslocar, e ir ao estado 50
    SOMA             deslocar, e ir ao estado 51
    MULTIPLICACAO    deslocar, e ir ao estado 52
    DIVISAO          deslocar, e ir ao estado 53
    RESTO            deslocar, e ir ao estado 54
    PONTO_E_VIRGULA  deslocar, e ir ao estado 26

    recursionOP  ir ao estado 55
    semi         ir ao estado 56
    op           ir ao estado 57


Estado 35

   38 closeParent: FECHA_PARENTESES .

    $padrão  reduzir usando a regra 38 (closeParent)


Estado 36

   16 code: var openParent parameters . closeParent
   17     | var openParent parameters . closeParent semi
   18     | var openParent parameters . closeParent semi code
   19     | var openParent parameters . closeParent openKey code closeKey code

    FECHA_PARENTESES  deslocar, e ir ao estado 35

    closeParent  ir ao estado 58


Estado 37

   12 code: var openParent closeParent .
   13     | var openParent closeParent . semi
   14     | var openParent closeParent . semi code
   15     | var openParent closeParent . openKey code closeKey code

    ABRE_CHAVE       deslocar, e ir ao estado 59
    PONTO_E_VIRGULA  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 12 (code)

    semi     ir ao estado 60
    openKey  ir ao estado 61


Estado 38

   23 parameters: value .
   24           | value . comma parameters

    VIRGULA  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 23 (parameters)

    comma  ir ao estado 62


Estado 39

    6 code: if openParent value . boolean_exp value closeParent openKey code closeKey
    7     | if openParent value . boolean_exp value closeParent openKey code closeKey code
    8     | if openParent value . boolean_exp value closeParent openKey code closeKey else openKey code closeKey

    MAIOR        deslocar, e ir ao estado 40
    MENOR        deslocar, e ir ao estado 41
    MAIOR_IGUAL  deslocar, e ir ao estado 42
    MENOR_IGUAL  deslocar, e ir ao estado 43
    IGUAL        deslocar, e ir ao estado 44

    boolean_exp  ir ao estado 63


Estado 40

   41 boolean_exp: MAIOR .

    $padrão  reduzir usando a regra 41 (boolean_exp)


Estado 41

   42 boolean_exp: MENOR .

    $padrão  reduzir usando a regra 42 (boolean_exp)


Estado 42

   43 boolean_exp: MAIOR_IGUAL .

    $padrão  reduzir usando a regra 43 (boolean_exp)


Estado 43

   44 boolean_exp: MENOR_IGUAL .

    $padrão  reduzir usando a regra 44 (boolean_exp)


Estado 44

   40 boolean_exp: IGUAL .

    $padrão  reduzir usando a regra 40 (boolean_exp)


Estado 45

    9 code: if value boolean_exp . value openKey code closeKey else openKey code closeKey code

    NUM   deslocar, e ir ao estado 22
    NOME  deslocar, e ir ao estado 6

    var    ir ao estado 23
    value  ir ao estado 64


Estado 46

    3 code: declaration recursionDec code .

    $padrão  reduzir usando a regra 3 (code)


Estado 47

    4 code: declaration assignment value . recursionOP
    5     | declaration assignment value . recursionOP code

    SUBTRACAO        deslocar, e ir ao estado 50
    SOMA             deslocar, e ir ao estado 51
    MULTIPLICACAO    deslocar, e ir ao estado 52
    DIVISAO          deslocar, e ir ao estado 53
    RESTO            deslocar, e ir ao estado 54
    PONTO_E_VIRGULA  deslocar, e ir ao estado 26

    recursionOP  ir ao estado 65
    semi         ir ao estado 56
    op           ir ao estado 57


Estado 48

   28 recursionDec: comma declaration . recursionDec

    PONTO_E_VIRGULA  deslocar, e ir ao estado 26
    VIRGULA          deslocar, e ir ao estado 27

    recursionDec  ir ao estado 66
    semi          ir ao estado 30
    comma         ir ao estado 31


Estado 49

   20 code: for openParent var assignment . value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey
   21     | for openParent var assignment . value semi var boolean_exp value semi var assignment var op value closeParent openKey code closeKey code

    NUM   deslocar, e ir ao estado 22
    NOME  deslocar, e ir ao estado 6

    var    ir ao estado 23
    value  ir ao estado 67


Estado 50

   46 op: SUBTRACAO .

    $padrão  reduzir usando a regra 46 (op)


Estado 51

   45 op: SOMA .

    $padrão  reduzir usando a regra 45 (op)


Estado 52

   47 op: MULTIPLICACAO .

    $padrão  reduzir usando a regra 47 (op)


Estado 53

   48 op: DIVISAO .

    $padrão  reduzir usando a regra 48 (op)


Estado 54

   49 op: RESTO .

    $padrão  reduzir usando a regra 49 (op)


Estado 55

   10 code: var assignment value recursionOP .
   11     | var assignment value recursionOP . code

    RES_DOUBLE  deslocar, e ir ao estado 1
    RES_FLOAT   deslocar, e ir ao estado 2
    RES_FOR     deslocar, e ir ao estado 3
    RES_IF      deslocar, e ir ao estado 4
    RES_INT     deslocar, e ir ao estado 5
    NOME        deslocar, e ir ao estado 6
    STRING      deslocar, e ir ao estado 7
    RES_BOOL    deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 10 (code)

    code         ir ao estado 68
    for          ir ao estado 11
    var          ir ao estado 12
    if           ir ao estado 13
    declaration  ir ao estado 14
    type         ir ao estado 15


Estado 56

   25 recursionOP: semi .

    $padrão  reduzir usando a regra 25 (recursionOP)


Estado 57

   26 recursionOP: op . value recursionOP

    NUM   deslocar, e ir ao estado 22
    NOME  deslocar, e ir ao estado 6

    var    ir ao estado 23
    value  ir ao estado 69


Estado 58

   16 code: var openParent parameters closeParent .
   17     | var openParent parameters closeParent . semi
   18     | var openParent parameters closeParent . semi code
   19     | var openParent parameters closeParent . openKey code closeKey code

    ABRE_CHAVE       deslocar, e ir ao estado 59
    PONTO_E_VIRGULA  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 16 (code)

    semi     ir ao estado 70
    openKey  ir ao estado 71


Estado 59

   35 openKey: ABRE_CHAVE .

    $padrão  reduzir usando a regra 35 (openKey)


Estado 60

   13 code: var openParent closeParent semi .
   14     | var openParent closeParent semi . code

    RES_DOUBLE  deslocar, e ir ao estado 1
    RES_FLOAT   deslocar, e ir ao estado 2
    RES_FOR     deslocar, e ir ao estado 3
    RES_IF      deslocar, e ir ao estado 4
    RES_INT     deslocar, e ir ao estado 5
    NOME        deslocar, e ir ao estado 6
    STRING      deslocar, e ir ao estado 7
    RES_BOOL    deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 13 (code)

    code         ir ao estado 72
    for          ir ao estado 11
    var          ir ao estado 12
    if           ir ao estado 13
    declaration  ir ao estado 14
    type         ir ao estado 15


Estado 61

   15 code: var openParent closeParent openKey . code closeKey code

    RES_DOUBLE  deslocar, e ir ao estado 1
    RES_FLOAT   deslocar, e ir ao estado 2
    RES_FOR     deslocar, e ir ao estado 3
    RES_IF      deslocar, e ir ao estado 4
    RES_INT     deslocar, e ir ao estado 5
    NOME        deslocar, e ir ao estado 6
    STRING      deslocar, e ir ao estado 7
    RES_BOOL    deslocar, e ir ao estado 8

    code         ir ao estado 73
    for          ir ao estado 11
    var          ir ao estado 12
    if           ir ao estado 13
    declaration  ir ao estado 14
    type         ir ao estado 15


Estado 62

   24 parameters: value comma . parameters

    NUM   deslocar, e ir ao estado 22
    NOME  deslocar, e ir ao estado 6

    parameters  ir ao estado 74
    var         ir ao estado 23
    value       ir ao estado 38


Estado 63

    6 code: if openParent value boolean_exp . value closeParent openKey code closeKey
    7     | if openParent value boolean_exp . value closeParent openKey code closeKey code
    8     | if openParent value boolean_exp . value closeParent openKey code closeKey else openKey code closeKey

    NUM   deslocar, e ir ao estado 22
    NOME  deslocar, e ir ao estado 6

    var    ir ao estado 23
    value  ir ao estado 75


Estado 64

    9 code: if value boolean_exp value . openKey code closeKey else openKey code closeKey code

    ABRE_CHAVE  deslocar, e ir ao estado 59

    openKey  ir ao estado 76


Estado 65

    4 code: declaration assignment value recursionOP .
    5     | declaration assignment value recursionOP . code
